--- a/bower.json
+++ b/bower.json
@@ -23,12 +23,12 @@
     "requirejs": "^2.2.0",
     "jquery": "^2.2.4",
     "font-awesome": "^4.6.0",
-    "tangram": "^0.7.2",
+    "tangram": "^0.8.0",
     "polyglot": "^2.0.0",
     "leaflet": "^1.0.0-rc.1",
     "leaflet-hash": "*",
     "keymaster": "^1.6.3",
-    "wikidata-sdk": "^2.0.0",
+    "wikidata-sdk": "master",
     "requirejs-plugins": "^1.0.3",
     "require-handlebars-plugin": "^1.0.0",
     "require-yaml": "^0.1.2",
