--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "Gruntfile.js",
   "dependencies": {
     "grunt": "~0.4.5",
+    "jshint-stylish": "~2.1.0",
     "time-grunt": "~1.3.0",
-    "jshint-stylish": "~2.1.0"
+    "tolmey": "^0.6.1"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "~1.0.0",
