Added browser compatibility check and loaded the map later. Split off the sidebars into their own modules

--- a/bower.json
+++ b/bower.json
@@ -39,6 +39,7 @@
     "requirejs-promised": "^0.1.0",
     "js-cookie": "^2.1.2",
     "PACE": "pace#^1.0.2",
-    "tipsy": "^0.1.7"
+    "tipsy": "^0.1.7",
+    "bowser": "^1.4.1"
   }
 }
