--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,7 @@
     "requirejs": "^2.2.0",
     "jquery": "^2.2.4",
     "font-awesome": "^4.6.0",
-    "tangram": "^0.8.2",
+    "tangram": "^0.10.4",
     "polyglot": "^2.0.0",
     "leaflet": "^1.0.0-rc.1",
     "leaflet-hash": "*",
@@ -40,6 +40,7 @@
     "js-cookie": "^2.1.2",
     "PACE": "pace#^1.0.2",
     "tipsy": "^0.1.7",
-    "bowser": "^1.4.1"
+    "bowser": "^1.4.1",
+    "lodash": "^4.16.4"
   }
 }
