--- a/bower.json
+++ b/bower.json
@@ -20,12 +20,12 @@
   ],
   "dependencies": {
     "handlebars": "^4.0.5",
-    "requirejs": "^2.2.0",
+    "requirejs": "^2.3.2",
     "jquery": "^2.2.4",
     "font-awesome": "^4.6.0",
     "tangram": "^0.10.4",
     "polyglot": "^2.0.0",
-    "leaflet": "^1.0.0-rc.1",
+    "leaflet": "^1.0.1",
     "leaflet-hash": "*",
     "keymaster": "^1.6.3",
     "wikidata-sdk": "master",
@@ -37,10 +37,10 @@
     "underscore": "^1.8.3",
     "postal.js": "^1.0.11",
     "requirejs-promised": "^0.1.0",
-    "js-cookie": "^2.1.2",
+    "js-cookie": "^2.1.3",
     "PACE": "pace#^1.0.2",
     "tipsy": "^0.1.7",
-    "bowser": "^1.4.1",
+    "bowser": "^1.4.6",
     "lodash": "^4.16.4"
   }
 }
