Updated tangram and included requirejs-promise

--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,7 @@
     "requirejs": "^2.3.2",
     "jquery": "^2.2.4",
     "font-awesome": "^4.7.0",
-    "tangram": "^0.10.6",
+    "tangram": "^0.11.0",
     "polyglot": "^2.0.0",
     "leaflet": "^1.0.1",
     "leaflet-hash": "*",
@@ -42,6 +42,7 @@
     "tipsy": "^0.1.7",
     "bowser": "^1.5.0",
     "lodash": "^4.16.5",
-    "leaflet-geocoder-mapzen": "^1.7.1"
+    "leaflet-geocoder-mapzen": "^1.7.1",
+    "requirejs-promise": "^1.2.0"
   }
 }
