--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "Gruntfile.js",
   "dependencies": {
     "grunt": "~0.4.5",
+    "ink-docstrap": "^1.3.0",
+    "jsdoc": "^3.4.3",
     "jshint-stylish": "~2.1.0",
     "time-grunt": "~1.3.0",
     "tolmey": "^0.6.1"
@@ -25,7 +27,8 @@
     "grunt-contrib-cssmin": "~1.0.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "builddocs": "node_modules/.bin/jsdoc --readme README.md src/* -r -c jsdoc.conf -d ./docs/ -t ./node_modules/ink-docstrap/template"
   },
   "author": "Reinier Battenberg",
   "license": "GPL 3.0"
